<resources>
    <string name="app_name">AppFragmentMDKEA3</string>
    <string name="valtitulo">MATERIAL DESIGN</string>
    <string name="valetusuario">Ingrese su usuario</string>
    <string name="valetpassword">Ingrese su password</string>
    <string name="valbtnlogin">INGRESAR</string>
    <string name="title_activity_principal">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valnavinicio">Inicio</string>
    <string name="valnavgaleria">Galería</string>
    <string name="valnavnotificaciones">Notificaciones</string>
    <string name="valtitulofragment">FORMULARIO FRAGMENT</string>
    <string name="valetnota1">Ingrese nota 1</string>
    <string name="valetnota2">Ingrese nota 2</string>
    <string name="valbtncalcular">CALCULAR</string>
</resources>